# sherlog

./: .gitignore  README.md  pyproject.toml
src/sherlog/: cli.py  rules.py
tests/: test_cli.py  test_rules.py
