[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sherlog"
version = "0.1.0"
description = "Sherlog — your build-log whisperer. Parse build logs and get actionable fixes with local SLMs."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Maxence Bouvier", email = "maxence.bouvier.pro@gmail.com"}]
requires-python = ">=3.10"
dependencies = [
  "regex>=2023.10.3",
  "rich>=13.7.0",
]

[project.optional-dependencies]
ml = [
  "transformers>=4.44.0",
  "accelerate>=0.33.0",
  "torch>=2.2,<3",
]
ml-gpu = [
  "flash-attn>=2.6.0",
]
test = [
  "pytest>=8.2",
]

[project.scripts]
sherlog = "sherlog.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sherlog"]

[tool.uv]
preview = true

[tool.uv.extra-build-dependencies]
# Ensure torch is available in the build env when building flash-attn wheels
# (some versions attempt to import torch at build time but don't declare it).
flash-attn = ["torch>=2.2,<3"]
# uv normalizes project names, so a single key covers `flash_attn`
sherlog = ["hatchling"]
